--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -83,14 +83,10 @@
             <img class="w-full h-full" src="images/graph2.png" alt=" " />
           </div>
           <div class="font-bold text-xl xl:text-2xl ml-3 justify-center">
-            <p class="text-gray-900 whitespace-no-wrap">
-              $ <%= profitLoss.toFixed(2)%> <% if(profitLoss < 0) { %> <%
-              color="red" %>
-              <span class="text-red-600 font-black text-2xl">&#8595;</span>
-              <% } else { %> <% color="green" %>
-              <span class="text-green-600 font-black text-2xl">&#8593;</span>
-              <% } %>
-            </p>
+            <p
+              id="profitLossValue"
+              class="text-gray-900 whitespace-no-wrap"
+            ></p>
             <span class="block text-gray-500 text-sm">Profit / Loss</span>
           </div>
         </div>
@@ -131,16 +127,17 @@
           </tr>
         </thead>
         <tbody>
-          <% profitLoss = 0 %> <% user.stock.forEach( (stock) => { %>
+          <% user.stock.forEach( (stock) => { %>
           <tr class="bg-white border-b text-center">
             <td class="px-4 py-2 text-center"><%= stock.companySymbol %></td>
             <td class="px-4 py-2 text-center">
-              <% currentPrice = Math.floor(stock.stockPrice*(Math.random()+0.6))
+              <% currentPrice = Math.floor(stock.stockPrice*(Math.random()+0.7))
               %> $<%= currentPrice %>
             </td>
             <td class="px-4 py-2 text-center">
               <% let price = currentPrice - stock.stockPrice %> <% profitLoss =
-              profitLoss + price %> <% if(price < 0) { %> <% color="red" %>
+              + currentPrice - stock.stockPrice %> <% if(price < 0) { %> <%
+              color="red" %>
               <span
                 >$<%= price.toFixed(2) %><span class="text-red-600 text-lg"
                   >&#8595;</span
@@ -154,6 +151,7 @@
               >
               <% } %>
             </td>
+
             <td class="px-4 py-2 text-center"><%= stock.noOfStock %></td>
             <td class="px-4 py-2 text-center">
               <form action="/transaction/sell/<%= stock._id%>" method="POST">
@@ -178,6 +176,9 @@
           <% }) %>
         </tbody>
       </table>
+
+      <p class="hidden" id="profitLoss"><%= profitLoss %></p>
+
       <% } else { %>
       <p><%= StockMessage %></p>
       <% } %>
@@ -191,6 +192,14 @@
 <!-- script for search bar -->
 
 <script>
+  let profitLossVal = document.getElementById("profitLoss").innerText;
+
+  if (profitLossVal < 0) {
+    document.getElementById("profitLossValue").innerHTML = parseFloat(profitLossVal).toFixed(2) + `<span class="text-red-600 ml-1 text-red-600 font-black text-2xl">&#8595;</span>`;
+  } else {
+    document.getElementById("profitLossValue").innerHTML = parseFloat(profitLossVal).toFixed(2) + `<span class="text-red-600 ml-1 text-green-600 font-black text-2xl">&#8593;</span>`;
+  }
+
   const inputField = document.getElementById('searchbar')
   inputField.addEventListener('input', (event) => {
       console.log(event.target.value)
