--- a/views/error/404.ejs
+++ b/views/error/404.ejs
@@ -55,7 +55,7 @@
           </p>
         </div>
         <div>
-          <p class="text-black text-center text-xl">Let's get to back</p>
+          <p class="text-black text-center text-xl">Let's get back</p>
         </div>
         <div style="display: flex; justify-content: center">
           <button
