--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -68,7 +68,7 @@
           </div>
           <div class="font-bold text-xl xl:text-2xl ml-3">
             <p class="text-gray-900 whitespace-no-wrap">
-              $ <%= totalPortfolio%>
+              $ <%= totalPortfolio.toFixed(2)%>
             </p>
             <span class="block text-gray-500 text-sm">Total Portfolio</span>
           </div>
@@ -100,7 +100,9 @@
             <img class="w-full h-full" src="images/graph3.png" alt=" " />
           </div>
           <div class="font-bold text-xl xl:text-2xl ml-3">
-            <p class="text-gray-900 whitespace-no-wrap">$ <%= user.balance%></p>
+            <p class="text-gray-900 whitespace-no-wrap">
+              $ <%= user.balance.toFixed(2)%>
+            </p>
             <span class="block text-gray-500 text-sm">Balance</span>
           </div>
         </div>
