Imrpovement in design

--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -1,4 +1,4 @@
-<main class="md:col-span-4 md:ml-56 lg:ml-64 md:pr-14 w-full">
+<main class="md:col-span-4 md:ml-56 lg:ml-64 w-full">
   <div class="container px-5 py-10 mx-auto md:px-auto">
     <!-- <div class="absolute-center mx-auto"> -->
 
