--- a/views/addBalance.ejs
+++ b/views/addBalance.ejs
@@ -9,7 +9,7 @@
         Add Balance
       </h2>
     </div>
-    <hr class="line" />
+    <hr class="border-2 border-gray-500 " />
 
     <div class="container py-16 mx-auto">
       <h3 class="text-2xl">Your Balance:<b> <%= user.balance%> </b></h3>
