--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,4 +1,4 @@
-<main class="md:col-span-4 bg-gray-300 md:ml-56 lg:ml-64 md:pr-14 w-full">
+<main class="md:col-span-4 md:ml-56 lg:ml-64 md:pr-14 w-full">
   <div class="container px-5 py-10 mx-auto md:px-auto">
     <h1>SEARCHED ITEMS</h1>
     <div class="relative text-gray-600 mt-12 shadow-md rounded-b-lg">
