search bar fixed

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -9,7 +9,7 @@
       >
     </header>
 
-    <hr class="line my-4 mb-8" />
+    <hr class="border-2 border-gray-700 my-4 mb-8" />
 
     <!--form  -->
 
