--- a/views/transaction/transaction.ejs
+++ b/views/transaction/transaction.ejs
@@ -12,10 +12,10 @@
         > -->
     </header>
 
-    <hr class="line my-4 mb-4" />
+    <hr class="border-2 border-gray-700" />
   </div>
 
-  <div class="mx-2">
+  <div class="mx-2 md:mt-10">
     <div
       class="rounded-lg bg-white flex flex-col items-center justify-center max-w-sm sm:max-w-lg mx-auto p-2"
     >
