--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,5 +1,5 @@
 <div
-  class="flex flex-col justify-center align-center text-center text-gray-800 mt-4"
+  class="my-2 flex flex-col justify-center align-center text-center text-gray-800 mt-4"
 >
   <p>Made with ❤ by TradeByte Team</p>
   <p>&copy; TradeByte Team, 2020</p>
