--- a/views/partials/_nav.ejs
+++ b/views/partials/_nav.ejs
@@ -49,7 +49,7 @@
     :class="{'block': open, 'hidden': !open}"
     class="flex-grow md:block px-4 pb-4 md:pb-0"
   >
-    <hr class="line mb-6" />
+    <hr class="border-2 border-gray-700 mb-4" />
 
     <div class="flex justify-center align-center rounded-full">
       <div class="notification">
