--- a/views/search.ejs
+++ b/views/search.ejs
@@ -40,6 +40,7 @@
 </main>
 <script>
   const inputField = document.getElementById('searchbar')
+  const inputResult = document.getElementById('search-result')
   inputField.addEventListener('input', (event) => {
       console.log(event.target.value)
       const value = event.target.value
@@ -58,7 +59,7 @@
       let n = data.length
       for (i = 0; i <= (n - 1); i++) {
           let item = data[i];
-          list += `<li><a href='/view/${item.Symbol}'>${item.Symbol}</a></li>`
+          list += `<li class="bg-white"><a href='/view/${item.Symbol}'>${item.Symbol}</a></li>`
       }
 
 
