--- a/views/transaction/history.ejs
+++ b/views/transaction/history.ejs
@@ -10,7 +10,7 @@
         >
       </header>
     </div>
-    <hr class="line my-4 mb-8" />
+    <hr class="border-2 border-gray-700" />
 
     <div class="flex flex-col lg:items-center">
       <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
