--- a/views/market.ejs
+++ b/views/market.ejs
@@ -1,9 +1,9 @@
 <section
-  class="text-gray-700 body-font md:ml-56 lg:ml-64 md:mx-auto md:pr-14 w-screen inline"
+  class="text-gray-700 body-font md:ml-56 lg:ml-64 md:mx-auto md:pr-14 w-screen"
 >
-  <div class="container px-5 py-10 mx-auto md:px-auto">
-    <div class="my-4 absolute-center md:flex">
-      <div class="md:w-1/2">
+  <div class="max-w-6xl mx-auto p-2 md:p-8">
+    <div class="my-4 md:flex mx-2 md:items-center md:justify-center">
+      <div class="md:w-2/3">
         <h2
           class="text-gray-700 lg:text-6xl text-5xl font-semibold leading-none tracking-wider px-5"
         >
@@ -12,194 +12,24 @@
       </div>
 
       <!-- search box -->
-      <div class="md:w-1/2">
+      <div class="md:w-1/3">
         <div>
-          <div
-            class="relative bg-white text-gray-800 mt-4 mr-12 shadow-md rounded-lg"
-          >
-            <input
-              id="searchbar"
-              type="search"
-              name="serch"
-              placeholder="Search Stocks"
-              class="bg-transparent h-10 px-5 pl-10 rounded-full text-lg focus:outline-none"
-            />
-            <button type="submit" class="absolute left-0 top-0 mt-3 ml-4">
-              <svg
-                class="h-4 w-4 fill-current"
-                xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink"
-                version="1.1"
-                id="Capa_1"
-                x="0px"
-                y="0px"
-                viewBox="0 0 56.966 56.966"
-                style="enable-background: new 0 0 56.966 56.966"
-                xml:space="preserve"
-                width="512px"
-                height="512px"
-              >
-                <path
-                  d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23  s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92  c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17  s-17-7.626-17-17S14.61,6,23.984,6z"
-                />
-              </svg>
-            </button>
-          </div>
+          <%- include('./partials/_search') %>
 
-          <ul
-            id="search-result"
-            style="height: 0px; overflow: hidden; white-space: pre"
-            class="text-lg p-5 ml-10 list-none mt-0 text-gray-700"
-          ></ul>
+          <div class="relative w-full result hidden">
+            <ul
+              id="search-result"
+              class="pt-2 -mt-2 bg-gray-300 rounded-full rounded-t-none absolute top-0 left-0 w-full"
+            ></ul>
+          </div>
 
           <!-- end of search box -->
         </div>
       </div>
     </div>
-    <div class="container pb-16 pt-8 mx-auto">
-      <div class="flex -m-4 inline-block overflow-x-auto whitespace-no-wrap">
-        <% for(var i=0; i < compactData.length; i++) { %>
-        <div class="inline p-4 my-4 mx-2">
-          <div
-            class="py-6 w-full rounded overflow-hidden shadow-lg hover:bg-white transition duration-500 bg-white"
-          >
-            <div class="space-y-10">
-              <div class="py-2 px-10">
-                <div class="space-y-5">
-                  <div class="font-bold text-2xl text-center mb-2">
-                    <%- compactData[i]["Symbol"] %>
-                  </div>
-                  <p class="text-gray-700 break-words text-center text-base">
-                    <%- compactData[i]["Company Name"] %>
-                  </p>
-                <a href="/view/<%- compactData[i]["Symbol"] %>">
-                  <button
-                    class="mr-1 mt-6 w-14 bg-white tracking-wide text-gray-700 font-bold rounded border-b-2 border-blue-500 hover:border-blue-600 hover:bg-blue-500 hover:text-white shadow-md py-2 px-2 inline-flex items-center"
-                  >
-                    <span class="mx-auto">VIEW</span>
-                  </button>
-                </a>
-                <a href="/cart/<%- compactData[i]["Symbol"] %>">
-                  <button
-                    class="w-24 pl-2 bg-white tracking-wide text-gray-700 font-bold rounded border-b-2 border-green-400 hover:border-green-400 hover:bg-green-400 hover:text-white shadow-md py-2 px-2 inline-flex items-center"
-                  >
-                    <span class="mx-auto">BUY</span>
-                  </button>
-                </a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <% } %>
-      </div>
-
-      <!-- genral stocks section -->
-      <div class="px-auto">
-        <div class="my-4 absolute-center pt-20">
-          <h2
-            class="text-gray-700 lg:text-6xl text-5xl font-semibold leading-none tracking-wider px-5"
-          >
-            Trending Stocks
-          </h2>
-        </div>
-
-        <div class="md:flex -m-4 inline-block mx-auto w-full flex-wrap pt-10">
-          <% for(var i=min; i < max; i++) { %>
-          <div class="lg:w-1/4 md:w-1/2 p-4 w-54 flex justify-center">
-            <div
-              class="flex items-center justify-center py-6 min-h-full w-full rounded overflow-hidden shadow-lg hover:bg-white transition duration-500 bg-white"
-            >
-              <div class="space-y-10 w-full">
-                <div class="py-2 px-4 md:px-10">
-                  <div class="space-y-5">
-                    <div class="font-bold text-2xl text-center mb-2">
-                      <%- totalData[i]["Symbol"] %>
-                    </div>
-                    <p class="text-gray-700 break-words text-center text-base">
-                      <%- totalData[i]["Company Name"] %>
-                    </p>
-                    <div class="flex justify-around px-6 md:px-2 w-2/3 mx-auto">
-                    <a href="/view/<%- totalData[i]["Symbol"] %>">
-                      <button
-                        class="w-20 mx-2 bg-white tracking-wide text-gray-700 font-bold rounded border-b-2 border-blue-500 hover:border-blue-600 hover:bg-blue-500 hover:text-white shadow-md py-2 px-2 inline-flex items-center"
-                      >
-                        <span class="mx-auto">VIEW</span>
-                      </button>
-                    </a>
-                    <a href="/cart/<%- totalData[i]["Symbol"] %>">
-                      <button
-                        class="w-32 mx-2 bg-white tracking-wide text-gray-700 font-bold rounded border-b-2 border-green-400 hover:border-green-400 hover:bg-green-400 hover:text-white shadow-md py-2 px-2 inline-flex items-center"
-                      >
-                        <span class="mx-auto">BUY</span>
-                      </button>
-                    </a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <% } %>
-        </div>
-
-        <!-- pagination element -->
-        <div class="pt-10">
-          <div class="flex justify-between">
-            <button
-              id="prev"
-              class="prev border border-teal-500 text-teal-500 block rounded-sm font-bold py-4 px-6 mr-2 flex items-center hover:bg-teal-500 hover:text-white"
-            >
-              <svg
-                class="h-5 w-5 mr-2 fill-current"
-                version="1.1"
-                id="Layer_1"
-                xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink"
-                x="0px"
-                y="0px"
-                viewBox="-49 141 512 512"
-                style="enable-background: new -49 141 512 512"
-                xml:space="preserve"
-              >
-                <path
-                  id="XMLID_10_"
-                  d="M438,372H36.355l72.822-72.822c9.763-9.763,9.763-25.592,0-35.355c-9.763-9.764-25.593-9.762-35.355,0 l-115.5,115.5C-46.366,384.01-49,390.369-49,397s2.634,12.989,7.322,17.678l115.5,115.5c9.763,9.762,25.593,9.763,35.355,0 c9.763-9.763,9.763-25.592,0-35.355L36.355,422H438c13.808,0,25-11.193,25-25S451.808,372,438,372z"
-                ></path>
-              </svg>
-              Previous page
-            </button>
-            <button
-              id="next"
-              class="next border border-teal-500 bg-teal-500 text-white block rounded-sm font-bold py-4 px-6 ml-2 flex items-center"
-            >
-              Next page
-              <svg
-                class="h-5 w-5 ml-2 fill-current"
-                clasversion="1.1"
-                id="Layer_1"
-                xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink"
-                x="0px"
-                y="0px"
-                viewBox="-49 141 512 512"
-                style="enable-background: new -49 141 512 512"
-                xml:space="preserve"
-              >
-                <path
-                  id="XMLID_11_"
-                  d="M-24,422h401.645l-72.822,72.822c-9.763,9.763-9.763,25.592,0,35.355c9.763,9.764,25.593,9.762,35.355,0
-                    l115.5-115.5C460.366,409.989,463,403.63,463,397s-2.634-12.989-7.322-17.678l-115.5-115.5c-9.763-9.762-25.593-9.763-35.355,0
-                    c-9.763,9.763-9.763,25.592,0,35.355l72.822,72.822H-24c-13.808,0-25,11.193-25,25S-37.808,422-24,422z"
-                />
-              </svg>
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
   </div>
 </section>
+
 <script>
   var prev = document
     .getElementById("prev")
@@ -236,23 +66,40 @@
 <!-- script for search bar -->
 
 <script>
-  const inputField = document.getElementById('searchbar')
+    const inputField = document.getElementById('searchbar')
+    const inputResult = document.getElementById('search-result')
+    const result = document.querySelector('.result')
+
+  document.addEventListener('click', (e)=>{
+    if( document.activeElement === inputField) {
+      result.classList.remove('hidden')
+    } else if(document.activeElement !== inputField){
+      result.classList.add('hidden')
+    }
+  })
+
   inputField.addEventListener('input', (event) => {
+      inputResult.classList.add('bg-white')
       console.log(event.target.value)
       const value = event.target.value
-          //sample data
+      //sample data
       const dataset = <%- JSON.stringify(totalData) %>;
-      // searching the symbol
-      let data = dataset.filter(function(el) {
+
+      // when symbol matches
+      let data = dataset.filter(function (el) {
           return el.Symbol.includes(value.toUpperCase())
       })
-      // when no symbol matched
+
+      // when no symbol matches
+
       if (data.length === 0) {
-          let data1 = dataset.filter(function(el) {
+
+          let data1 = dataset.filter(function (el) {
               return (el["Company Name"].toLowerCase().includes(value.toLowerCase()))
           })
           data = data1;
       }
+
       let list = "";
       if (value === "") {
           list = "";
@@ -261,7 +108,10 @@
       let n = data.length
       for (i = 0; i <= (n - 1); i++) {
           let item = data[i];
-          list += `<li><a href='/view/${item.Symbol}'>${item.Symbol}</a></li>`
+          list += `
+          <a href='/view/${item.Symbol}'>
+          <li class="bg-white p-2 w-full ${(i%2===0) ? 'bg-gray-300' : 'bg-gray-100'}">${item.Symbol}</li>
+          </a>`
       }
       document.getElementById('search-result').innerHTML = list;
       console.log(data)
