--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -14,44 +14,14 @@
       </h2>
     </header>
 
-    <hr class="border-2 border-gray-700" />
+    <hr class="border-2 border-gray-700 mb-8" />
 
     <!-- search box -->
 
     <div>
-      <div
-        class="bg-white relative text-gray-800 mt-12 shadow-md rounded-lg z-50 w-full"
-      >
-        <input
-          id="searchbar"
-          type="search"
-          name="serch"
-          placeholder="Search Stocks"
-          class="bg-transparent h-10 px-5 pl-10 block w-full rounded-full text-lg focus:outline-none z-50"
-        />
-        <button type="submit" class="absolute left-0 top-0 mt-3 ml-4">
-          <svg
-            class="h-4 w-4 fill-current"
-            xmlns="http://www.w3.org/2000/svg"
-            xmlns:xlink="http://www.w3.org/1999/xlink"
-            version="1.1"
-            id="Capa_1"
-            x="0px"
-            y="0px"
-            viewBox="0 0 56.966 56.966"
-            style="enable-background: new 0 0 56.966 56.966"
-            xml:space="preserve"
-            width="512px"
-            height="512px"
-          >
-            <path
-              d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23  s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92  c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17  s-17-7.626-17-17S14.61,6,23.984,6z"
-            />
-          </svg>
-        </button>
-      </div>
+      <%- include('./partials/_search.ejs') %>
 
-      <div class="relative w-full">
+      <div class="relative w-full result">
         <ul
           id="search-result"
           class="pt-2 -mt-2 bg-gray-300 rounded-full rounded-t-none absolute top-0 left-0 w-full"
@@ -200,56 +170,64 @@
   let profitLossVal = document.getElementById("profitLoss").innerText;
 
   if (profitLossVal < 0) {
-    document.getElementById("profitLossValue").innerHTML = parseFloat(profitLossVal).toFixed(2) + `<span class="text-red-600 ml-1 text-red-600 font-black text-2xl">&#8595;</span>`;
+    document.getElementById("profitLossValue").innerHTML =
+      parseFloat(profitLossVal).toFixed(2) +
+      `<span class="text-red-600 ml-1 text-red-600 font-black text-2xl">&#8595;</span>`;
   } else {
-    document.getElementById("profitLossValue").innerHTML = parseFloat(profitLossVal).toFixed(2) + `<span class="text-red-600 ml-1 text-green-600 font-black text-2xl">&#8593;</span>`;
+    document.getElementById("profitLossValue").innerHTML =
+      parseFloat(profitLossVal).toFixed(2) +
+      `<span class="text-red-600 ml-1 text-green-600 font-black text-2xl">&#8593;</span>`;
   }
 
   const inputField = document.getElementById('searchbar')
   const inputResult = document.getElementById('search-result')
+  const result = document.querySelector('.result')
 
   document.addEventListener('click', (e)=>{
-    if(e.target !== inputField && e.target !== inputResult){
-      console.log('ertrete')
+    if( document.activeElement === inputField) {
+      result.classList.remove('hidden')
+    } else if(document.activeElement !== inputField){
+      result.classList.add('hidden')
     }
   })
+
   inputField.addEventListener('input', (event) => {
-      inputResult.classList.add('bg-white')
-      console.log(event.target.value)
-      const value = event.target.value
-      //sample data
-      const dataset = <%- JSON.stringify(totalData) %> ;
+    inputResult.classList.add('bg-white')
+    console.log(event.target.value)
+    const value = event.target.value
+    //sample data
+    const dataset = <%- JSON.stringify(totalData) %> ;
 
-      // when symbol matches
+    // when symbol matches
 
-      let data = dataset.filter(function (el) {
-          return el.Symbol.includes(value.toUpperCase())
+    let data = dataset.filter(function (el) {
+      return el.Symbol.includes(value.toUpperCase())
+    })
+
+    // when no symbol matches
+
+    if (data.length === 0) {
+
+      let data1 = dataset.filter(function (el) {
+        return (el["Company Name"].toLowerCase().includes(value.toLowerCase()))
       })
+      data = data1;
+    }
 
-      // when no symbol matches
-
-      if (data.length === 0) {
-
-          let data1 = dataset.filter(function (el) {
-              return (el["Company Name"].toLowerCase().includes(value.toLowerCase()))
-          })
-          data = data1;
-      }
-
-      let list = "";
-      if (value === "") {
-          list = "";
-          data = [];
-      }
-      let n = data.length
-      for (i = 0; i <= (n - 1); i++) {
-          let item = data[i];
-          list += `
-          <a href='/view/${item.Symbol}'>
-          <li class="bg-white p-2 w-full ${(i%2===0) ? 'bg-gray-300' : 'bg-gray-100'}">${item.Symbol}</li>
-          </a>`
+    let list = "";
+    if (value === "") {
+      list = "";
+      data = [];
+    }
+    let n = data.length
+    for (i = 0; i <= (n - 1); i++) {
+      let item = data[i];
+      list += `
+      <a href='/view/${item.Symbol}'>
+        <li class="bg-white p-2 w-full ${(i%2===0) ? 'bg-gray-300' : 'bg-gray-100'} hover:bg-gray-600 hover:text-white">${item.Symbol}</li>
+        </a>`
       }
       document.getElementById('search-result').innerHTML = list;
       console.log(data)
-  })
+    })
 </script>
