--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -8,6 +8,8 @@ html,
 body {
   margin: 0;
   padding: 0;
+  height: 100vh;
+  width: 100vw;
   overflow-x: hidden;
   box-sizing: border-box;
   background: linear-gradient(122.51deg, #e6ecfc 30%, #7fb4f1 100%) !important;
