--- a/views/market.ejs
+++ b/views/market.ejs
@@ -1,7 +1,7 @@
 <section
-  class="text-gray-700 body-font md:ml-56 lg:ml-64 md:mx-auto md:pr-14 w-screen"
+  class="text-gray-700 body-font md:ml-56 lg:ml-64 md:mx-auto md:pr-14 w-full"
 >
-  <div class="max-w-6xl mx-auto p-2 md:p-8">
+  <div class="max-w-6xl mx-auto p-2 md:p-8 w-full">
     <div class="my-4 md:flex mx-2 md:items-center md:justify-center">
       <div class="md:w-2/3">
         <h2
@@ -12,7 +12,7 @@
       </div>
 
       <!-- search box -->
-      <div class="md:w-1/3">
+      <div class="md:w-2/3 lg:w-1/3">
         <div>
           <%- include('./partials/_search') %>
 
@@ -22,10 +22,145 @@
               class="pt-2 -mt-2 bg-gray-300 rounded-full rounded-t-none absolute top-0 left-0 w-full"
             ></ul>
           </div>
-
-          <!-- end of search box -->
         </div>
       </div>
+    </div>
+    <div class="container relative">
+      
+  <div class="w-full absolute top-0 right-0 mx-auto">
+    <div class="flex overflow-x-auto p-2">
+      <% for(var i=0; i < compactData.length; i++) { %>
+      <div class="bg-white mr-4 p-4 rounded shadow-lg">
+        <div class="box w-56 h-56 flex flex-col justify-center items-center">
+          <div class="font-bold text-2xl text-center mb-2">
+            <%- compactData[i]["Symbol"] %>
+          </div>
+          <p class="text-gray-700 break-words text-center text-base">
+            <%- compactData[i]["Company Name"] %>
+          </p>
+          <div class="btns flex justify-between items-center ">
+            <a href="/view/<%- compactData[i]["Symbol"] %>">
+              <button
+                class="mr-1 w-14 bg-white tracking-wide text-gray-700 font-bold rounded border-b-2 border-blue-500 hover:border-blue-600 hover:bg-blue-500 hover:text-white shadow-md py-2 px-2 inline-flex items-center"
+              >
+                <span class="mx-auto">VIEW</span>
+              </button>
+            </a>
+            <a href="/cart/<%- compactData[i]["Symbol"] %>">
+              <button
+                class="pl-2 bg-white tracking-wide text-gray-700 font-bold rounded border-b-2 border-green-400 hover:border-green-400 hover:bg-green-400 hover:text-white shadow-md py-2 px-2 inline-flex items-center"
+              >
+                <span class="mx-auto">BUY</span>
+              </button>
+            </a>
+          </div>
+        </div>
+      </div>
+      <% } %>
+    </div>
+  </div>
+</div>
+
+
+      <!-- genral stocks section -->
+      <div class="px-auto pt-64">
+        <div class="my-4 absolute-center pt-20">
+          <h2
+            class="text-gray-700 lg:text-6xl text-5xl font-semibold leading-none tracking-wider px-5"
+          >
+            Trending Stocks
+          </h2>
+        </div>
+
+        <div class="grid sm:grid-cols-2 xl:grid-cols-4 gap-4 pt-10">
+          <% for(var i=min; i < max; i++) { %>
+          <div class=" max-w-sm flex justify-center mx-auto w-full">
+            <div
+              class="flex items-center justify-center py-6 min-h-full w-full rounded shadow-lg hover:bg-white transition duration-500 bg-white"
+            >
+                  <div class="space-y-5 ">
+                    <div class="font-bold text-2xl text-center mb-2">
+                      <%- totalData[i]["Symbol"] %>
+                    </div>
+                    <p class="text-gray-700 break-words text-center text-base px-1">
+                      <%- totalData[i]["Company Name"] %>
+                    </p>
+                    <div class="flex justify-around px-6 md:px-2 w-2/4 mx-auto">
+                    <a href="/view/<%- totalData[i]["Symbol"] %>">
+                      <button
+                        class=" mx-2 bg-white tracking-wide text-gray-700 font-bold rounded border-b-2 border-blue-500 hover:border-blue-600 hover:bg-blue-500 hover:text-white shadow-md py-2 px-2 inline-flex items-center"
+                      >
+                        <span class="mx-auto">VIEW</span>
+                      </button>
+                    </a>
+                    <a href="/cart/<%- totalData[i]["Symbol"] %>">
+                      <button
+                        class=" mx-2 bg-white tracking-wide text-gray-700 font-bold rounded border-b-2 border-green-400 hover:border-green-400 hover:bg-green-400 hover:text-white shadow-md py-2 px-2 inline-flex items-center"
+                      >
+                        <span class="mx-auto">BUY</span>
+                      </button>
+                    </a>
+                    </div>
+              </div>
+            </div>
+          </div>
+          <% } %>
+        </div>
+
+        <!-- pagination element -->
+        <div class="pt-10">
+          <div class="flex justify-between">
+            <button
+              id="prev"
+              class="prev border border-teal-500 text-teal-500 block rounded-sm font-bold py-4 px-6 mr-2 flex items-center hover:bg-teal-500 hover:text-white"
+            >
+              <svg
+                class="h-5 w-5 mr-2 fill-current"
+                version="1.1"
+                id="Layer_1"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                x="0px"
+                y="0px"
+                viewBox="-49 141 512 512"
+                style="enable-background: new -49 141 512 512"
+                xml:space="preserve"
+              >
+                <path
+                  id="XMLID_10_"
+                  d="M438,372H36.355l72.822-72.822c9.763-9.763,9.763-25.592,0-35.355c-9.763-9.764-25.593-9.762-35.355,0 l-115.5,115.5C-46.366,384.01-49,390.369-49,397s2.634,12.989,7.322,17.678l115.5,115.5c9.763,9.762,25.593,9.763,35.355,0 c9.763-9.763,9.763-25.592,0-35.355L36.355,422H438c13.808,0,25-11.193,25-25S451.808,372,438,372z"
+                ></path>
+              </svg>
+              Previous page
+            </button>
+            <button
+              id="next"
+              class="next border border-teal-500 bg-teal-500 text-white block rounded-sm font-bold py-4 px-6 ml-2 flex items-center"
+            >
+              Next page
+              <svg
+                class="h-5 w-5 ml-2 fill-current"
+                clasversion="1.1"
+                id="Layer_1"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                x="0px"
+                y="0px"
+                viewBox="-49 141 512 512"
+                style="enable-background: new -49 141 512 512"
+                xml:space="preserve"
+              >
+                <path
+                  id="XMLID_11_"
+                  d="M-24,422h401.645l-72.822,72.822c-9.763,9.763-9.763,25.592,0,35.355c9.763,9.764,25.593,9.762,35.355,0
+                    l115.5-115.5C460.366,409.989,463,403.63,463,397s-2.634-12.989-7.322-17.678l-115.5-115.5c-9.763-9.762-25.593-9.763-35.355,0
+                    c-9.763,9.763-9.763,25.592,0,35.355l72.822,72.822H-24c-13.808,0-25,11.193-25,25S-37.808,422-24,422z"
+                />
+              </svg>
+            </button>
+          </div>
+        </div>
+      </div>      
     </div>
   </div>
 </section>
