table user select set to none

--- a/views/market.ejs
+++ b/views/market.ejs
@@ -74,7 +74,7 @@
 
         <div class="grid sm:grid-cols-2 xl:grid-cols-4 gap-4 pt-10">
           <% for(var i=min; i < max; i++) { %>
-          <div class=" max-w-sm flex justify-center mx-auto w-full">
+          <div class=" max-w-sm h-56 flex justify-center mx-auto w-full">
             <div
               class="flex items-center justify-center py-6 min-h-full w-full rounded shadow-lg hover:bg-white transition duration-500 bg-white"
             >
