--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -89,7 +89,7 @@
         <h2 class="text-lg font-bold leading-tight py-3">Your Stock Status</h2>
       </div>
       <% if( StockMessage === '') { %>
-      <table class="table-fixed w-full">
+      <table class="table-fixed w-full select-none">
         <thead>
           <tr
             class="bg-gray-100 font-semibold text-gray-600 text-xs uppercase border-b tracking-wider"
