--- a/views/transaction/history.ejs
+++ b/views/transaction/history.ejs
@@ -19,7 +19,7 @@
             class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg"
           >
             <% if(message === '') { %>
-            <table class="min-w-full table-auto divide-y divide-gray-200 overflow-x-auto">
+            <table class="min-w-full table-auto divide-y divide-gray-200 overflow-x-auto select-none">
               <thead>
                 <tr class="bg-gray-200 px-12">
                   <th class="p-1 sm:p-4 text-sm sm:text-xl border-r-2 border-gray-300 break-all">Date</th>
