--- a/views/transaction/transaction.ejs
+++ b/views/transaction/transaction.ejs
@@ -39,7 +39,7 @@
       </p>
       <form action="/transaction/confirm" method="POST">
         <input type="hidden" name="_method" value="PUT" />
-        <table class="table-auto min-w-full rounded-lg">
+        <table class="table-auto min-w-full rounded-lg select-none">
           <tbody>
             <tr>
               <td class="border py-2 text-sm sm:text-xl">Company Symbol:</td>
