fixes in transaction page (not history)

--- a/views/transaction/transaction.ejs
+++ b/views/transaction/transaction.ejs
@@ -42,10 +42,10 @@
         <table class="table-auto min-w-full rounded-lg select-none">
           <tbody>
             <tr>
-              <td class="border py-2 text-sm sm:text-xl">Company Symbol:</td>
+              <td class="border py-2 px-2 text-sm sm:text-xl">Company Symbol:</td>
               <td class="border py-2">
                 <input
-                  class="text-right transaction-input text-sm sm:text-xl"
+                  class="text-right px-2 transaction-input text-sm sm:text-xl"
                   readonly
                   type="text"
                   name="companySymbol"
@@ -54,10 +54,10 @@
               </td>
             </tr>
             <tr class="bg-gray-100">
-              <td class="border py-2 text-sm sm:text-xl">Stock Price:</td>
+              <td class="border py-2 px-2 text-sm sm:text-xl">Stock Price:</td>
               <td class="border py-2">
                 <input
-                  class="text-right bg-gray-100 transaction-input text-sm sm:text-xl"
+                  class="text-right px-2 bg-gray-100 transaction-input text-sm sm:text-xl"
                   readonly
                   type="Number"
                   name="stockPrice"
@@ -66,10 +66,10 @@
               </td>
             </tr>
             <tr class="">
-              <td class="border py-2 text-sm sm:text-xl">Number of Stock:</td>
+              <td class="border py-2 px-2 text-sm sm:text-xl">Number of Stock:</td>
               <td class="border py-2">
                 <input
-                  class="text-right transaction-input text-sm sm:text-xl"
+                  class="text-right px-2 transaction-input text-sm sm:text-xl"
                   readonly
                   type="Number"
                   name="noOfStock"
@@ -78,10 +78,10 @@
               </td>
             </tr>
             <tr class="bg-gray-100">
-              <td class="border py-2 text-sm sm:text-xl">Total Amount:</td>
+              <td class="border py-2 px-2 text-sm sm:text-xl">Total Amount:</td>
               <td class="border py-2">
                 <input
-                  class="text-right bg-gray-100 transaction-input text-sm sm:text-xl"
+                  class="text-right px-2 bg-gray-100 transaction-input text-sm sm:text-xl"
                   readonly
                   type="Number"
                   name="totalAmount"
