--- a/views/transaction/transaction.ejs
+++ b/views/transaction/transaction.ejs
@@ -57,7 +57,7 @@
               <td class="border py-2 px-2 text-sm sm:text-xl">Stock Price:</td>
               <td class="border py-2">
                 <input
-                  class="text-right px-2 bg-gray-100 transaction-input text-sm sm:text-xl"
+                  class="text-right px-2 bg-gray-100 transaction-input text-sm sm:text-xl without-arrow"
                   readonly
                   type="Number"
                   name="stockPrice"
@@ -69,9 +69,9 @@
               <td class="border py-2 px-2 text-sm sm:text-xl">Number of Stock:</td>
               <td class="border py-2">
                 <input
-                  class="text-right px-2 transaction-input text-sm sm:text-xl"
+                  class="text-right px-2 transaction-input text-sm sm:text-xl without-arrow"
                   readonly
-                  type="Number"
+                  type="number"
                   name="noOfStock"
                   value="<%= data.noOfStock%>"
                 />
@@ -81,9 +81,9 @@
               <td class="border py-2 px-2 text-sm sm:text-xl">Total Amount:</td>
               <td class="border py-2">
                 <input
-                  class="text-right px-2 bg-gray-100 transaction-input text-sm sm:text-xl"
+                  class="text-right px-2 bg-gray-100 transaction-input text-sm sm:text-xl without-arrow"
                   readonly
-                  type="Number"
+                  type="number"
                   name="totalAmount"
                   value="<%= data.totalAmount%>"
                 />
