--- a/views/market.ejs
+++ b/views/market.ejs
@@ -14,20 +14,21 @@
       <!-- search box -->
       <div class="md:w-2/3 lg:w-1/3">
         <div>
-          <%- include('./partials/_search') %>
+          <%- include('./partials/_search.ejs') %>
 
           <div class="relative w-full result hidden">
             <ul
               id="search-result"
-              class="pt-2 -mt-2 bg-gray-300 rounded-full rounded-t-none absolute top-0 left-0 w-full"
+              class="pt-2 -mt-2 bg-white rounded-full rounded-t-none absolute top-0 left-0 w-full z-50"
             ></ul>
           </div>
         </div>
       </div>
     </div>
     <div class="container relative">
-      
-  <div class="w-full absolute top-0 right-0 mx-auto">
+
+      <!--  Popular stock section -->
+  <div class="w-full absolute top-0 right-0 mx-auto z-10">
     <div class="flex overflow-x-auto p-2">
       <% for(var i=0; i < compactData.length; i++) { %>
       <div class="bg-white mr-4 p-4 rounded shadow-lg">
@@ -215,7 +216,6 @@
 
   inputField.addEventListener('input', (event) => {
       inputResult.classList.add('bg-white')
-      console.log(event.target.value)
       const value = event.target.value
       //sample data
       const dataset = <%- JSON.stringify(totalData) %>;
@@ -228,7 +228,6 @@
       // when no symbol matches
 
       if (data.length === 0) {
-
           let data1 = dataset.filter(function (el) {
               return (el["Company Name"].toLowerCase().includes(value.toLowerCase()))
           })
