cleaned up css in tailwind.css

--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -9,7 +9,7 @@
         class="text-gray-700 text-3xl font-semibold leading-none tracking-wider"
         >Hello,</span
       >
-      <h2 class="text-5xl leading-none tracking-wider view-link">
+      <h2 class="text-5xl leading-none tracking-wider text-blue-900 select-none">
         <%= user.displayName%>.
       </h2>
     </header>
