--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,7 +8,7 @@
       <div class="flex flex-row items-center justify-between p-4">
         <a href="#" class="flex-shrink-0 text-center">
           <img
-            class="h-8 w-8 tradebyte-logo"
+            class="h-8 w-8"
             src="../images/TradeByte-Favicon.png"
             alt="Logo"
           />
