--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -73,6 +73,7 @@
                 type="number"
                 value="1"
                 min="1"
+                max="30"
                 name="noOfStock"
                 id="noOfStock"
                 class="w-full font-semibold text-center text-gray-700 bg-gray-200 outline-none focus:outline-none hover:text-black focus:text-black"
