Edit form input set to required to avoid 500 error

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -26,6 +26,7 @@
         </div>
         <div class="md:w-2/3">
           <input
+            required
             type="text"
             id="displayName"
             name="displayName"
@@ -45,6 +46,7 @@
         </div>
         <div class="md:w-2/3">
           <input
+            required
             type="text"
             name="firstName"
             value="<%=firstName%>"
@@ -63,6 +65,7 @@
         </div>
         <div class="md:w-2/3">
           <input
+            required
             type="text"
             id="lastName"
             name="lastName"
@@ -82,6 +85,7 @@
         </div>
         <div class="md:w-2/3">
           <input
+            required
             class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500"
             type="email"
             id="email"
@@ -93,6 +97,7 @@
 
       <div class="md:flex justify-center">
         <input
+          required
           type="submit"
           value="Save"
           class="save_btn ml-6 mx-2 cursor-pointer lg:ml-24 btn mb-4 shadow bg-blue-700 hover:bg-blue-800 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
