profit bug fixed

--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -5,7 +5,7 @@
     <form action="/cart/buy" method="POST">
       <h1 class="text-xl lg:text-3xl font-bold mt-8 mb-4 flex">
         Buy Stock :<input
-          class="bg-gray-300 max-w-sm w-24 ml-2"
+          class="bg-transparent max-w-sm w-24 ml-2"
           type="text"
           readonly
           value="<%= symbol %>"
