Profit/Loss bug fixed along Alt Image text

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -389,7 +389,7 @@
                 <img
                   src="https://avatars3.githubusercontent.com/u/42767012?s=460&v=4"
                   class="rounded-full w-16 h-16 mr-2"
-                  alt="Fab Rizvi"
+                  alt="Pavan Gandhi"
                 />
                 <div class="text-left">
                   <h2
