--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -9,7 +9,9 @@
         class="text-gray-700 text-3xl font-semibold leading-none tracking-wider"
         >Hello,</span
       >
-      <h2 class="text-5xl leading-none tracking-wider text-blue-900 select-none">
+      <h2
+        class="text-5xl leading-none tracking-wider text-blue-900 select-none"
+      >
         <%= user.displayName%>.
       </h2>
     </header>
@@ -37,7 +39,11 @@
           class="card bg-white rounded-lg flex items-center h-20 sm:h-20 w-full object-cover px-5 shadow-2xl"
         >
           <div class="flex-shrink-0 w-10 h-10">
-            <img class="w-full h-full" src="images/graph1.png" alt="graph" />
+            <img
+              class="w-full h-full text-xs break-words"
+              src="images/graph1.png"
+              alt="total portfolio graph illustration"
+            />
           </div>
           <div class="font-bold text-xl xl:text-2xl ml-3">
             <p class="text-gray-900 whitespace-no-wrap">
@@ -53,7 +59,11 @@
           class="card bg-white rounded-lg flex items-center h-20 sm:h-20 w-full object-cover px-5 shadow-2xl"
         >
           <div class="flex-shrink-0 w-10 h-10">
-            <img class="w-full h-full" src="images/graph2.png" alt="graph" />
+            <img
+              class="w-full h-full text-xs text-xs"
+              src="images/graph2.png"
+              alt="profit and loss graph illustration"
+            />
           </div>
           <div class="font-bold text-xl xl:text-2xl ml-3 justify-center">
             <p
@@ -70,7 +80,11 @@
           class="card bg-white rounded-lg flex items-center h-20 sm:h-20 w-full object-cover px-5 shadow-2xl"
         >
           <div class="flex-shrink-0 w-10 h-10">
-            <img class="w-full h-full" src="images/graph3.png" alt="graph" />
+            <img
+              class="w-full h-full text-xs break-words"
+              src="images/graph3.png"
+              alt="balance graph illustration"
+            />
           </div>
           <div class="font-bold text-xl xl:text-2xl ml-3">
             <p class="text-gray-900 whitespace-no-wrap">
@@ -219,14 +233,9 @@
       console.log(data)
   })
 
-  let profitLossVal = document.getElementById("profitLoss");
+  let profitLossVal = document.getElementById("profitLoss").innerHTML;
   function insertProfitValue(profitLossVal) {
-
-    if(!profitLossVal) {
-      return
-    }; // if its null/undefined then do not proceed further
-
-    if (profitLossVal.innerHTML < 0) {
+    if (profitLossVal < 0) {
       document.getElementById("profitLossValue").innerHTML = parseFloat(profitLossVal).toFixed(2) + `<span class="text-red-600 ml-1 text-red-600 font-black text-2xl">&#8595;</span>`;
     } else {
       document.getElementById("profitLossValue").innerHTML = parseFloat(profitLossVal).toFixed(2) + `<span class="text-red-600 ml-1 text-green-600 font-black text-2xl">&#8593;</span>`;
