--- a/views/login.ejs
+++ b/views/login.ejs
@@ -547,20 +547,26 @@
         class="flex flex-col text-xs md:text-sm items-center justify-between mt-6 md:flex-row"
       >
         <div class="text-center md:text-left">
-          <a href="/" class="text-2xl font-bold">TradeByte</a>
+          <a href="/" class="text-2xl font-bold"> TradeByte</a>
           <p class="text-base">Stocks Trading Simulation WebApp.</p>
           <p>This app is made for educational purpose only.</p>
         </div>
         <div class="flex mt-4 md:m-0 items-start">
           <div class="-mx-4 text-center md:text-right">
-            <p class="mb-2">&copy; Copyright TradeByte Team, 2020</p>
+            <p class="text-base mb-2">&copy; Copyright TradeByte Team, 2020</p>
             <hr class="my-2 bg-gray-700 border-none" />
             <p>Email: pavangandhi100@gmail.com</p>
-            <a
-              target="_blank"
-              href="https://github.com/iampavangandhi/TradeByte"
-              >Check and Star ❤️ The Repo on GitHub</a
-            >
+            <p>
+              Check and Star ❤️
+              <a
+                target="_blank"
+                class="underline"
+                href="https://github.com/iampavangandhi/TradeByte"
+              >
+                The Repo
+              </a>
+              on GitHub
+            </p>
           </div>
         </div>
       </div>
