Done page improved adn added simple pg layout

--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -2,8 +2,6 @@
 
 /* Custom CSS */
 
-/* Main CSS */
-
 html,
 body {
   margin: 0;
@@ -113,6 +111,21 @@ animated {
 .grid-indigo {
   background-image: radial-gradient(#5a67d8 2px, transparent 2px);
   background-size: 16px 16px;
+}
+
+/* Done page */
+.share > .container {
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.4s all ease-in-out;
+  transform: translateY(50%);
+}
+/* Share button */
+.share.showAddThisButtons > .container {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(45%);
+  margin-top: 0.5rem;
 }
 
 @tailwind utilities;
