--- a/views/done.ejs
+++ b/views/done.ejs
@@ -1,123 +1,43 @@
-<!--Thankyou PAGE -->
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tradebyte</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css"
-      integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o="
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/style.css" />
-    <!--stylesheet -->
-    <style>
-      /* paragraph in the done page*/
-
-      p {
-        margin: 10px 0 !important;
-        font-weight: 600;
-        font-size: 1.5rem;
-        color: black;
-      }
-      /* Heading in the done page*/
-
-      .heading {
-        font-size: 50px;
-        text-align: center;
-        color: green;
-      }
-      /* The main container or card in the done page*/
-
-      .done-container {
-        width: 400px;
-        text-align: center;
-        height: 400px;
-        border: black;
-      }
-      /* check icon*/
-
-      #check {
-        color: rgb(155, 245, 155);
-        padding-bottom: 5px;
-        text-shadow: rgb(101, 245, 101);
-      }
-      /* share button container*/
-
-      .share > .container {
-        position: absolute;
-        width: 200px;
-        background: white;
-        box-shadow: #ada5a5;
-        margin-top: 12px;
-        margin-bottom: 15px;
-        border-radius: 5px;
-        opacity: 0;
-        visibility: hidden;
-        transition: 1s;
-        transform: translateY(10%);
-      }
-      /*Share button showdatabutton*/
-
-      .share.showAddThisButtons > .container {
-        opacity: 1;
-        visibility: visible;
-        transform: translateY(0);
-      }
-
-      .addthis_inline_share_toolbox,
-      .addthis_sharing_toolbox {
-        text-align: center;
-      }
-    </style>
-  </head>
-
-  <body style="display: flex; justify-content: center; align-items: center">
     <!---Card component-->
+    <div class="m-2">
     <div
-      style="display: flex; justify-content: center; align-items: center"
-      class="done-container max-w-sm mx-auto flex p-5 bg-white rounded-lg shadow-2xl"
+      class="flex justify-center items-center done-container max-w-sm mx-auto flex p-5 bg-white rounded-lg shadow-2xl"
     >
       <div class="py-4">
-        <h1 class="heading font-bold mb-2 text-center6+">Done</h1>
-        <div>
+        <h1 class="heading font-bold mb-2 text-6xl text-center text-green-700">Done</h1>
+        <div class="flex justify-center items-center text-green-400">
           <i id="check" class="far fa-check-circle fa-7x"></i>
         </div>
         <div>
-          <p class="text-black-700 text-center">Thankyou for using TradeByte</p>
+          <p class="text-black-700 text-center text-2xl font-semibold mt-4">Thank you for using TradeByte</p>
         </div>
-        <div style="display: flex; justify-content: center">
+        <div class="flex justify-center items-center">
           <button
-            onclick="back()"
-            class="bg-gray-700 hover:bg-red-400 text-white font-bold py-2 px-5 mx-2 mt-4 mb-3 rounded-full"
+            onClick="back()"
+            class="bg-gray-700 hover:bg-red-400 text-white font-bold py-2 px-3 md:px-5 mx-2 mt-4 mb-3 rounded-full"
           >
             <i class="far fa-times-circle"></i> Back
           </button>
 
           <button
-            class="share bg-gray-700 hover:bg-blue-400 text-white font-bold py-2 px-5 mx-2 mt-4 mb-3 rounded-full cursor-pointer"
+            class="relative share bg-gray-700 hover:bg-blue-400 text-white font-bold py-2 px-3 md:px-5 mx-2 mt-4 mb-3 rounded-full cursor-pointer"
             onclick="share(this)"
           >
-            <i class="fas fa-share-alt"></i> Share
-            <div class="container">
-              <div
-                class="addthis_inline_share_toolbox"
-                data-url="<%= host %>/share/<%= userId %>"
-              ></div>
-              <div class="addthis_sharing_toolbox"></div>
-            </div>
-          </button>
-        </div>
+              <i class="fas fa-share-alt"></i> Share
+              <div class="container absolute top-0 left-0 w-48 bg-white shadow-lg rounded mt-10 mb-12 -ml-16 sm:ml-0">
+                <div
+                  class="addthis_inline_share_toolbox text-center"
+                  data-url="<%= host %>/share/<%= userId %>"
+                ></div>
+                <div class="addthis_sharing_toolbox text-center"></div>
+              </div>
+            </button>
+          </div>
+        </div>  
       </div>
     </div>
 
-    <!---------------------java script-------------------------->
+    <!---------------------JavaScript-------------------------->
     <script>
       let AddThisJSLoaded = false; // Addthis not loaded yet
       let clickedOnShare = false; // share button is not clicked
@@ -181,6 +101,3 @@
         button.classList.toogle("showAddThisButtons");
       }
     </script>
-    <script src="javascript/script.js"></script>
-  </body>
-</html>
