Error 404 page done

--- a/views/layouts/simple-page.ejs
+++ b/views/layouts/simple-page.ejs
@@ -15,6 +15,7 @@
     type="image/x-icon"
   />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>TradeByte</title>
   </head>
 
