fix in view page on medium screen

--- a/views/view.ejs
+++ b/views/view.ejs
@@ -1,4 +1,4 @@
-<div class="relative md:ml-64 py-6 px-3 w-full">
+<div class="relative md:ml-56 lg:ml-64 py-6 px-3 w-full">
   <div class="mx-auto max-w-4xl">
     <div class="head flex justify-between items-center mx-auto my-4">
       <div class="company flex flex-col justify-start">
