minor change in 500 error page

--- a/views/error/500.ejs
+++ b/views/error/500.ejs
@@ -15,7 +15,7 @@
       <div class="flex justify-center items-center">
         <button
           onclick="back()"
-          class="bg-blue-500 hover:bg-blue-100 font-bold py-2 px-4 mb-2 border border-blue-700 rounded"
+          class="text-blue-700 hover:bg-blue-100 font-bold py-2 px-4 mb-2 border border-blue-700 rounded"
         >
           Go to Homepage
         </button>
